# agent-runtime-specification

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-request.md  implementation-issue.md  specification-issue.md
.github/workflows/: specification-ci.yml
docs/: README.md  architecture.md  conformance.md  development.md  ecosystem.md  quick-start.md
examples/governance/: basic-gate.md
examples/minimal/: hello-world.md
examples/recovery/: crash-recovery.md
implementation/: architecture.md  mapping.md  reference-implementation.md  runtime.md
reference/: audit-record.md  contracts.md  error-codes.md  glossary.md  invariants.md  policies.md  recovery.md  state-model.md  verification-rules.md  workflow-model.md
reference/hermes/: pyproject.toml
reference/hermes/hermes_core/: __init__.py
reference/hermes/hermes_core/audit/: __init__.py  audit_log.py  commit.py  recovery.py
reference/hermes/hermes_core/core/: __init__.py  constants.py  exceptions.py  types.py
reference/hermes/hermes_core/execution/: __init__.py  executor.py
reference/hermes/hermes_core/governance/: __init__.py  gate.py
reference/hermes/hermes_core/scheduler/: cron.py
reference/hermes/hermes_core/state/: experiment_db.py  repo_index.py
reference/hermes/hermes_core/verification/: __init__.py  safety.py  static_analysis.py
reference/hermes/hermes_core/workflow/: engine.py
scripts/: verify-spec.py
tests/: README.md  conftest.py  coverage.md  mapping.md
(+26 files in other folders)
