[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-core"
version = "1.0.0"
description = "ARS v1.0 Reference Implementation (Hermes)"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["hermes_core", "hermes_core.*"]
